app/assets/stylesheets/shared/_lists.css.scss
nav.pagination { display: none; }  // We are using infinite scroll

.list-item {
  clear: both;
  padding: 15px 0;
  border-bottom: 1px solid $list-item-separator-color;

  &:hover { background: $dark-white; }

  a, a:hover { text-decoration: none; }

  .item-checkbox { float: left; }

  .item-avatar {
    display: block;
    float: left;
    margin: 0 10px 0 0;
    background: $soft-grey;
    color: #fff;
    text-align: center;

    i { margin: 2px 0; }
  }

  &.small {
    .item-avatar, img {
      font-size: 30px;
      width: 32px;
      height: 32px;
      border-radius: 5px;
    }

    .item {
      width: 400px;
    }

    .item-excerpt { font-size: 0.95em; }
  }

  &.big {
    .item-checkbox { margin: 22px 15px; }

    .item-avatar, img {
      font-size: 54px;
      width: 64px;
      height: 64px;
      border-radius: 7px;
    }

    .item {
      min-height: 64px;
      width: 620px;
    }
  }

  .item {
    float: left;

    .item-title {
      font-family: inherit;
      font-size: 1.15em;
      color: $text-link-color;
      margin: 0 0 2px;
    }

    .item-excerpt { color: $text-color; }
  }

  &.map {
    .item-avatar { background: $meppit-maps-color; }
    .item .item-title { color: $meppit-maps-color; }
  }
  &.geo_data {
    .item-avatar { background: $meppit-data-color; }
    .item .item-title { color: $meppit-data-color; }
  }

  .item-controls {
    text-align: center;
    .counters { margin: 8px 0;  }
  }
}

.modal {
   .list-container {
     height: 400px;
     overflow-y: auto;
   }

   .list-item {

      .item {
        min-height: 0;
        width: 200px;
      }

      .item-excerpt { display: none; }
   }
}

.site-page.index {
  .list-headline {
    border-bottom: solid 1px $ultra-soft-grey;

    .selected-count {
      display: inline-block;
      font-size: 0.8em;
      color: $soft-grey;
      margin-left: 10px;
    }
  }

  .list-actions {
    padding: 10px 0;
    border-bottom: solid 1px $ultra-soft-grey;

    .upload-btn, .download, .select-all-btn {
      @include button;
      float: none;
      margin-left: 0;
    }

    .select-all-btn {
      padding-top: 5px;
      input[type=checkbox] { position: relative; top: 3px; }
    }
  }

  &.geo_data {
    .list-actions {

      .add-new-btn {
        @include button($meppit-data-color, $meppit-dark-blue, $white, $border: $meppit-data-color);
        float: right;
      }
      .add-to-map { float: none; }
    }
  }

  &.maps {
    .list-actions {

      .add-new-btn {
        @include button($meppit-maps-color, $dark-orange, $white, $border: $meppit-maps-color);
        float: right;
      }
    }
  }


  .list-filters {
    background-color: $meppit-light-blue;
    border: $meppit-blue 1px solid;
    border-radius: 5px;
    padding: 10px;

    .filter-headline {
      font-weight: bold;
      position: relative;
      height: 1.8em;

      .title {
        display: inline-block;
        padding-top: 5px;
      }

      .toggle-panel {
        @include blue-button;
        display: inline-block;
        cursor: pointer;
        padding: 4px 8px;
        position: absolute;
        right: 0;
        width: 150px;

        &.en { width: 120px; }

        i { margin-right: 10px; }
      }
    }

    section {
      border-bottom: solid 1px $soft-grey;
      padding: 10px 0;

      &.splitted {
        display: inline-block;
        width: 48%;
        vertical-align: top;
        border-bottom: none;

        &.right { padding-left: 20px; }
      }

      header {
        font-size: 14px;
        font-weight: bold;
        margin: 10px 0;
      }
    }

    .vertical-separator {
      width: 1px;
      height: 60px;
      margin-top: 20px;
      border-left: solid 1px $soft-grey;
      display: inline-block;
    }

    .filter-form {
      .filter-tags {
        label[for=tags] {
          display: inline-block;
          vertical-align: top;
          font-weight: bold;
          margin-top: 12px;
        }

        .tags_type {
          display: inline-block;
          width: 220px;
          vertical-align: top;
          margin-top: 5px;
        }
        .tags {
          display: inline-block;
          width: 600px;
          margin-top: 0;

          .tagsinput {
            background: inherit;
            min-height: 0 !important;

            .tag {
              background-color: darken($meppit-light-blue, 5%);
            }

            input {
              background: $main-color-bg;
              border-radius: 4px;
            }
          }
        }
      }

      .sort_by, .order {
        display: inline-block;
        width: 48%;
      }

      .choice-title {
        font-weight: bold;
        margin-right: 20px;
        vertical-align: top;
      }

      .choice {
        display: inline-block;
        width: 340px;
      }
      .sort_by .choice { width: 80px; }
      .order .choice { width: 110px; }

      .filters-apply {
        position: relative;
        height: 1.8em;
        margin-top: 10px;

        .apply-btn {
          @include blue-button;
          position: absolute;
          right: 0;
          padding: 4px 25px;
        }
      }
    }

  }

}

